deps: update deps

--- a/package.json
+++ b/package.json
@@ -2,38 +2,38 @@
   "name": "egg-issue-helper",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://issue.eggjs.app",
   "dependencies": {
-    "@types/prop-types": "^15.5.2",
-    "@types/react-intl": "^2.3.2",
-    "antd": "^3.0.0",
-    "compare-versions": "^3.1.0",
-    "prop-types": "^15.6.0",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-intl": "^2.4.0",
-    "react-scripts-ts": "2.8.0",
-    "remarkable": "^1.7.1",
-    "whatwg-fetch": "^2.0.3"
+    "antd": "^3.6.6",    
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-scripts-ts": "2.16.0",
+    "remarkable": "^1.7.1"
   },
   "scripts": {
     "start": "react-app-rewired start --scripts-version react-scripts-ts",
     "build": "react-app-rewired build --scripts-version react-scripts-ts",
-    "test": "react-scripts-ts test --env=jsdom",
+    "test": "react-app-rewired test --env=jsdom --scripts-version react-scripts-ts",
     "eject": "react-scripts-ts eject",
+    "build-docker": "docker build -t egg-issue-helper .",
+    "tslint-check": "tslint-config-prettier-check ./tslint.json",
     "deploy": "npm run build && cd build && git init && git commit --allow-empty -m 'Update' && git checkout -b gh-pages && git add . && git commit -am 'Update' && git push git@github.com:eggjs/egg-issue-helper.git gh-pages --force"
   },
   "devDependencies": {
-    "@types/jest": "^21.1.6",
-    "@types/node": "^8.0.53",
-    "@types/react": "^16.0.24",
-    "@types/react-dom": "^16.0.3",
-    "babel-core": "^6.26.0",
-    "babel-plugin-import": "^1.6.2",
-    "babel-preset-react-app": "^3.1.0",
-    "html-loader": "^0.5.1",
-    "markdown-loader": "^2.0.1",
-    "react-app-rewire-less-modules": "^1.0.0",
-    "react-app-rewired": "^1.3.5",
-    "ts-import-plugin": "^1.4.2"
+    "@types/jest": "^23.1.5",
+    "@types/node": "^10.5.2",
+    "@types/prop-types": "^15.5.3",
+    "@types/react": "^16.4.6",
+    "@types/react-dom": "^16.0.6",
+    "@types/react-intl": "^2.3.8",
+    "compare-versions": "^3.3.0",
+    "html-loader": "^0.5.5",
+    "markdown-loader": "^3.0.0",    
+    "lodash.clonedeep": "^4.5.0",
+    "react-app-rewire-less": "^2.1.2",
+    "react-app-rewired": "^1.5.2",
+    "react-intl": "^2.4.0",
+    "ts-import-plugin": "^1.5.4",
+    "typescript": "^2.9.2"
   }
 }
